Modified cover image to scale correctly and modified title text.
Cover image will "cover" the available area - note this means stretching will occur if the image is too small for the window.

Modified the heading above the cover to be the blog title, and the text over the cover image to be the description or the post title depending on the page.

Fixes #3

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -170,13 +170,14 @@ img.logo {
 
 #cover {
     width: 100%;
-    height: 250px;
+    min-height: 300px;
     overflow: hidden;
-    background-size: auto auto;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
 
+    //necessary to vertically align the text
     display: table;
     position: relative;
 
